--- a/.github/workflow/hello.yaml
+++ b/.github/workflow/hello.yaml
@@ -6,7 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "v-2024.02.19-dev-actions" ]
+    branches:
+    - main
+    - v-2024.02.19-dev-actions
   pull_request:
     branches: [ "main" ]
 
