--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,12 +1,14 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CI_Hello
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "v-2024.02.19-dev-actions" ]
+    branches:
+    - main
+    - v-2024.02.19-dev-actions
   pull_request:
     branches: [ "main" ]
 
