--- a/.github/workflows/build_docker_image.yaml
+++ b/.github/workflows/build_docker_image.yaml
@@ -16,13 +16,13 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+env: 
+  name: ${{ github.ref_name }}
 
 jobs:
   
   build:
     runs-on: ubuntu-latest
-    environment: 
-      name: ${{ github.ref_name }}
     steps:
       - name: Print a Hello
         run: echo "HELLO!"
